Changing file name

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
       <div class="row">
         <div class="col">
-        <img src="Images/shop.jpg" class="posun2" height="250" width="" alt="obrazok">
+        <img src="images/shop.jpg" class="posun2" height="250" width="" alt="obrazok">
         </div>
         <div class="col">
           <h5 class="nazov1 posun2">Lorem Ipsum Dolor Sit Amet Consec Adipiscing</h5>
